Changes to spec for /projects/users + progress
